--- a/myproject/myapp/templates/database.html
+++ b/myproject/myapp/templates/database.html
@@ -6,8 +6,7 @@
     <title>Database</title>
 </head>
 <body>
-    <h1>Database</h1>
-    <a href="/">Back to Home</a>
+    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a>
     <h1>Database Entries</h1>
     <table border="1">
         <tr>
