--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Our Site!</h1>
-    <a href="/form/">Form</a> | <a href="/database/">Database</a>
+    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a>
     <p>This is the home landing page of our Django application.</p>
     <p>Click on the links above to navigate to the form and database pages.</p>
 </body>
