--- a/myproject/api/templates/api.html
+++ b/myproject/api/templates/api.html
@@ -6,7 +6,7 @@
     <title>API Feature</title>
 </head>
 <body>
-    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a>
+    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a> | <a href="/metrics/">Sales Performance Page</a>
     <h1>Product and Inventory Data</h1>
     <ul>
         {% for product in page_obj %}
