--- a/myproject/myapp/templates/database.html
+++ b/myproject/myapp/templates/database.html
@@ -6,7 +6,7 @@
     <title>Database</title>
 </head>
 <body>
-    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a>
+    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a> | <a href="/metrics/">Sales Performance Page</a>
     <h1>Database Entries</h1>
     <table border="1">
         <tr>
