--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <body>
     <h1>Welcome to KCSF!</h1>
-    <a href="/">Home</a> | <a href="/form/">Form</a> | <a href="/database/">Database | <a href="{% url 'api_feature' %}">API Page</a> | <a href="/metrics/">Sales Performance Page</a>
     <p>This is the home landing page of our Django application.</p>
     <p>Click on the links above to navigate to the form and database pages.</p>
+</body>
 {% endblock %}
