--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -1,20 +1,44 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: #000000;
 }
 
 header, footer {
-    background-color: #f8f9fa;
+    color: #ffffff;
+    background-color: #7e0303;
     padding: 10px 20px;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
+header {
+    text-decoration: none;
+    color: #ffffff;
 }
 
 nav ul li {
     display: inline;
+    margin-right: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #ffffff;
+    margin-right: 10px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+    color: #aaaaaa;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header img {
+    max-width: 100%;
+    height: 50px;
     margin-right: 10px;
 }
