--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
             <ul>
-                <a href="/form/">Form</a> <a href="/database/">Database</a> <a href="{% url 'api_feature' %}">API Page</a> <a href="/metrics/">Sales Performance Page</a>
+                <a href="/form/">Form</a> <a href="/database/">Database</a> <a href="{% url 'api_feature' %}">API</a> <a href="/metrics/">Sales Performance Page</a>
             </ul>
         </nav>
     </header>
