--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <body>
-    <h1>Welcome to KCSF!</h1>
+    <h1>Welcome to KCSF, {{ user.first_name }}!</h1>
     <p>This is the home landing page of our Django application.</p>
     <p>Click on the links above to navigate to the form and database pages.</p>
 </body>
