--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Project{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico.jpg' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
@@ -24,16 +25,24 @@
                     <ul class="nav-item"><a href="/metrics/" class="nav-link">Sales Performance</a></ul>
                 </ul>
             </nav>
-            <nav class="nav-right">
-                <div class="auth-section">
-                    {% if user.is_authenticated %}
-                        <span class="user-welcome">Hello, {{ user.username }}!</span>
-                        <a href="{% url 'logout' %}" class="auth-link">Logout</a>
-                    {% else %}
-                        <a href="{% url 'login' %}" class="auth-link">Login</a>
-                    {% endif %}
-                </div>
-            </nav>
+        </nav>
+        <nav class="nav-right">
+            <div class="auth-section">
+                {% if user.is_authenticated %}
+                <ul>
+                    <form action="{% url 'logout' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" style="background:none; border:none; padding:0; color:rgb(255, 255, 255); text-decoration:underline; cursor:pointer">
+                            Logout
+                        </button>
+                    </form>
+                </ul>
+            {% else %}
+                <ul><a href="{% url 'login' %}">Login</a></ul>
+            {% endif %}
+            </div>
+        </nav>
+
         </div>
         <div class="banner"></div>
     </header>
@@ -47,6 +56,8 @@
         <p>© 2024 KCSF Central. All rights reserved.</p>
     </footer>
 
-    {% block extra_js %}{% endblock %}
+    {% block extra_js %}
+        <script src="{% static 'base.js' %}"></script>
+    {% endblock %}
 </body>
 </html>
