--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -20,6 +20,7 @@
             <nav class="nav-center">
                 <ul class="nav-list">
                     <ul class="nav-item"><a href="/form/" class="nav-link">Form</a></ul>
+                    <ul class="nav-item"><a href="/parts/" class="nav-link">Parts</a></ul>
                     <ul class="nav-item"><a href="/database/" class="nav-link">Database</a></ul>
                     <ul class="nav-item"><a href="/api/" class="nav-link">API</a></ul>
                     <ul class="nav-item"><a href="/metrics/" class="nav-link">Sales Performance</a></ul>
