--- a/myproject/myapp/templates/form.html
+++ b/myproject/myapp/templates/form.html
@@ -11,12 +11,25 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-    <h1>Parts List</h1>
-    <div class="container">
-        <form method="post">
-            {% csrf_token %}
-            {{ view.as_p }}
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+        <div class="container">
+            <h1>Parts List</h1>
+            <table>
+                <tr>
+                    <th>Part Name</th>
+                    <th>Part Number</th>
+                    <th>Quantity</th>
+                </tr>
+                {% for part in parts %}
+                    <tr>
+                        <td>{{ part.part_name }}</td>
+                        <td>{{ part.part_number }}</td>
+                        <td>{{ part.quantity }}</td>
+                    </tr>
+                {% endfor %}
+            <form method="post">
+                {% csrf_token %}
+                {{ view.as_p }}
+                <button type="submit">Submit</button>
+            </form>
+        </div>
 {% endblock %}
