--- a/myproject/static/css/styles.css
+++ b/myproject/static/css/styles.css
@@ -190,7 +190,7 @@ form button {
 form button:hover {
     background-color: #ffffff;
     color: #7e0303;
-    border: 2.5px solid #ffffff;
+    border: 2.5px solid #7e0303;
 }
 .container-wrapper {
     display: flex;         /* Enables flexbox */
@@ -211,3 +211,33 @@ form button:hover {
     box-sizing: border-box;
 }
 
+button[type="submit"] {
+    background-color: #7e0303;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: 2.5px solid #7e0303;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #ffffff;
+    color: #7e0303;
+    border: 2.5px solid #7e0303;
+}
+
+.paginator {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #757575;
+    border-radius: 3px;
+    padding: 3px 10px;
+}
+
+.paginator:hover {
+    text-decoration: none;
+    color: #757575;
+    background-color: #ffffff;
+    border-radius: 3px;
+    padding: 3px 10px;
+}
